// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`correct value should be verified 1`] = `
[
  {
    "id": "URL",
    "kind": "url",
    "properties": {},
    "title": "url.test",
    "value": "https://www.google.com",
  },
]
`;

exports[`undefined value should be verified if not required 1`] = `
[
  {
    "id": "URL",
    "kind": "url",
    "properties": {},
    "title": "url.test",
    "value": "",
  },
]
`;
